--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,33 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
 	id 'maven-publish' //maven发布插件
+	id "com.google.cloud.tools.jib" version "2.6.0" //jib插件
 }
 
 ext {
 	set('springCloudVersion', "Hoxton.SR8")
 	set('platformVersion', "Cairo-SR8")
+	set('artifactId', "crs-client")
+}
+
+//使用jib生成镜像（image）
+jib {
+    from {
+        image = 'harbor.mvmyun.com/library/openjdk:11.0.7-jre-slim'
+    }
+    to {
+        image = "harbor.mvmyun.com/hotel/${artifactId}"
+        tags = ['latest', "${project.version}"]
+        auth {
+            username = 'dev' // Defined in 'gradle.properties'.
+            password = 'Dev123456'
+        }
+    }
+    container {
+        creationTime = 'USE_CURRENT_TIMESTAMP'
+        jvmFlags = ['-Duser.timezone=Asia/Shanghai', '-Djava.security.egd=file:/dev/./urandom']
+    }
+    allowInsecureRegistries = true
 }
 
 configurations {
